// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should edit members 1`] = `
<Fragment>
  <ButtonIcon
    className="button-small"
    onClick={[Function]}
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;

exports[`should edit members 2`] = `
<Fragment>
  <ButtonIcon
    className="button-small"
    onClick={[Function]}
  >
    <BulletListIcon />
  </ButtonIcon>
  <EditMembersModal
    group={
      Object {
        "id": 3,
        "membersCount": 5,
        "name": "Foo",
      }
    }
    onClose={[Function]}
    organization="org"
  />
</Fragment>
`;

exports[`should edit members 3`] = `
<Fragment>
  <ButtonIcon
    className="button-small"
    onClick={[Function]}
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;
